Enable adding proxies to serialization-config.json and parse them from this file